[package]
name = "s3-load-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.1.0"
aws-sdk-s3 = "1.10.0"
aws-credential-types = "1.1.0"
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rand = "0.8"
humantime = "2.1"
indicatif = "0.17"
chrono = "0.4"
anyhow = "1.0"
futures = "0.3"
bytes = "1.5"

